[package]
authors = ["Till Klocke <till.klocke@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "fill-helper"
version = "0.1.0"

[dependencies]
#cortex-m = "0.6.2"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
panic-halt = "0.2"
rotary-encoder-hal = {path = "../rotary-encoder-hal", features = ["table-decoder"]}
ssd1306 = "0.4"
embedded-graphics = "0.6"

[dependencies.cortex-m-rtic]
version = "0.5"
features = []

[dependencies.embedded-hal]
version = "0.2"
#features = ["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.6"
features = ["rt", "stm32f103", "medium"]

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# this lets you use `cargo fix`!
[[bin]]
name = "fill-helper"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
